--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.9.1",
+    "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^7.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
